--- a/Core/build.gradle
+++ b/Core/build.gradle
@@ -16,7 +16,7 @@ dependencies {
     implementation("org.khelekore:prtree:1.7.0-SNAPSHOT")
     // Adventure related stuff
     implementation('net.kyori:adventure-api:4.0.0-SNAPSHOT')
-    implementation('net.kyori:adventure-text-minimessage:3.0.0-SNAPSHOT')
+    implementation('net.kyori:adventure-text-minimessage:4.0.0-SNAPSHOT')
     compile("com.google.inject:guice:4.2.3")
     compile("com.google.inject.extensions:guice-assistedinject:4.2.3")
     compile group: 'com.google.code.findbugs', name: 'annotations', version: '3.0.1'
@@ -25,6 +25,7 @@ dependencies {
     // logging
     implementation("org.apache.logging.log4j:log4j-slf4j-impl:2.8.1")
     implementation('com.intellectualsites:Pipeline:1.4.0-SNAPSHOT')
+    implementation('com.intellectualsites.arkitektonika:Arkitektonika-Client:2.0-SNAPSHOT')
 }
 
 sourceCompatibility = 1.8
@@ -82,7 +83,7 @@ shadowJar {
         include(dependency('net.kyori:adventure-gson:4.0.0-SNAPSHOT'))
         include(dependency('net.kyori:adventure-legacy:4.0.0-SNAPSHOT'))
         include(dependency('net.kyori:adventure-plain:4.0.0-SNAPSHOT'))
-        include(dependency('net.kyori:adventure-text-minimessage:3.0.0-SNAPSHOT'))
+        include(dependency('net.kyori:adventure-text-minimessage:4.0.0-SNAPSHOT'))
         include(dependency('org.khelekore:prtree:1.7.0-SNAPSHOT'))
     }
     relocate('net.kyori.text', 'com.plotsquared.formatting.text')
